update: notes from client and some copy content;

--- a/sections/page-about-us.liquid
+++ b/sections/page-about-us.liquid
@@ -45,14 +45,16 @@
                 </div>
 
                 <div class="yaas-inner-col">
-                  Hi. Hello. Hey. We’re Elevate. We’re a Company. Transmedia company if you’re telling your friends about us. Basically that means we like to tell stories with communities across a bunch of platforms. Which is cool. But not as cool as you for checking us out.
+                  Thanks so much for checking us out. We’re bringing Deadbeat to the world because we believe in having fun and we want to make something awesome with YOU.
                   <br/>
                   <br/>
-                  So Deadbeat.
+                  So Deadbeat...
+                  <br/>
+                  <br/>
                   It’s a wild story wrapped around a giant community game. You create your characters, discover new music, go to parties IRL, listen to our radio station, maybe even contribute to it.
                   <br/>
                   <br/>
-                  This world is your world, this world is our world, from the OC waters to the OC islands. This world was made for you and us.
+                  This world your world, this world is out world, from the OC waters to the OC islands. This world was made for you and us.
                 </div>
 
                 <div class="yaas-inner-col">
@@ -116,73 +118,75 @@
     </div>
   </section>
 
-  <section class="db-section db-section--about-us-subscribe">
-    <div class="db-container">
-      <div class="db-row">
-        <div class="db-col">
-          <img class="db-img"
-            alt=""
-            title=""
-            src="{{ 'About-Us__asset-subscribe-v01.png' | asset_url }}"
-            width=""
-            height=""
-            loading="lazy"/>
-          <img class="db-img"
-            alt=""
-            title=""
-            src="{{ 'About-Us__asset-mb-subscribe-v01.png' | asset_url }}"
-            width=""
-            height=""
-            loading="lazy"/>
-        </div>
-        <div class="db-col">
-          <h4>
-            CREATE THE STORY WORLD
-          </h4>
-          <p>
-            Get updated to our exciting promotions, limited offers, articles and resources.
-          </p>
-          <form class="db-form--newsletter db-form validate"
-            id="mc-embedded-subscribe-form"
-            name="mc-embedded-subscribe-form"
-            method="post"
-            action="https://elevate-m.us21.list-manage.com/subscribe/post?u=c9161b1e17a490930cf29bfcd&amp;id=b779bd68b4&amp;f_id=00fbdce6f0"
-            accept-charset="UTF-8"
-            target="_blank">
-            <div class="db-form-wrap">
-              <div class="db-form-group">
-                <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                  /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
-                  <input type="text" name="b_c9161b1e17a490930cf29bfcd_b779bd68b4" tabindex="-1" value="">
+  {% comment %}
+    <section class="db-section db-section--about-us-subscribe">
+      <div class="db-container">
+        <div class="db-row">
+          <div class="db-col">
+            <img class="db-img"
+              alt=""
+              title=""
+              src="{{ 'About-Us__asset-subscribe-v01.png' | asset_url }}"
+              width=""
+              height=""
+              loading="lazy"/>
+            <img class="db-img"
+              alt=""
+              title=""
+              src="{{ 'About-Us__asset-mb-subscribe-v01.png' | asset_url }}"
+              width=""
+              height=""
+              loading="lazy"/>
+          </div>
+          <div class="db-col">
+            <h4>
+              CREATE THE STORY WORLD
+            </h4>
+            <p>
+              Get updated to our exciting promotions, limited offers, articles and resources.
+            </p>
+            <form class="db-form--newsletter db-form validate"
+              id="mc-embedded-subscribe-form"
+              name="mc-embedded-subscribe-form"
+              method="post"
+              action="https://elevate-m.us21.list-manage.com/subscribe/post?u=c9161b1e17a490930cf29bfcd&amp;id=b779bd68b4&amp;f_id=00fbdce6f0"
+              accept-charset="UTF-8"
+              target="_blank">
+              <div class="db-form-wrap">
+                <div class="db-form-group">
+                  <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                    /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
+                    <input type="text" name="b_c9161b1e17a490930cf29bfcd_b779bd68b4" tabindex="-1" value="">
+                  </div>
+                </div>
+                <div class="db-form-group">
+                  <input class="db-form-input required email"
+                    id="mce-EMAIL"
+                    type="email"
+                    name="EMAIL"
+                    placeholder="Enter Your Email Address"
+                    required=""
+                    value=""
+                    autocorrect="off"
+                    autocapitalize="off">
+                  <button class="db-btn--form-subscribe db-btn"
+                    id="mc-embedded-subscribe"
+                    type="submit"
+                    name="subscribe">
+                    SUBSCRIBE
+                  </button>
                 </div>
               </div>
-              <div class="db-form-group">
-                <input class="db-form-input required email"
-                  id="mce-EMAIL"
-                  type="email"
-                  name="EMAIL"
-                  placeholder="Enter Your Email Address"
-                  required=""
-                  value=""
-                  autocorrect="off"
-                  autocapitalize="off">
-                <button class="db-btn--form-subscribe db-btn"
-                  id="mc-embedded-subscribe"
-                  type="submit"
-                  name="subscribe">
-                  SUBSCRIBE
-                </button>
+              <div id="mce-responses" class="clear foot">
+                <div class="response" id="mce-error-response" style="display: none;"></div>
+                <div class="response" id="mce-success-response" style="display: none;"></div>
               </div>
-            </div>
-            <div id="mce-responses" class="clear foot">
-              <div class="response" id="mce-error-response" style="display: none;"></div>
-              <div class="response" id="mce-success-response" style="display: none;"></div>
-            </div>
-          </form>
+            </form>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+  {% endcomment %}
 </div>
 
 <script>
