--- a/sections/page-explore-oc.liquid
+++ b/sections/page-explore-oc.liquid
@@ -167,16 +167,17 @@
       <div class="db-container">
         <div class="db-row">
           <h1>
-            <span>Death</span>
+            <span>Afterlife</span>
             <span>in the oc</span>
           </h1>
           <div class="db-col">
             You should stare at this screen, don’t blin... don’t bl....dammit stop. Ugh, just press play.
           </div>
         </div>
+
         <div class="db-row"
           ref="videoContainer"
-          :class="{'fullscreen': isVideoFullScreen === true}"
+          :class="{ 'fullscreen': isVideoFullScreen === true }"
           @mouseenter="handleMouseEnter"
           @mouseleave="handleMouseLeave">
 
@@ -318,7 +319,7 @@
               BEHIND THE SCENES
             </div>
             <div class="description">
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Step into the intriguing world of Deadbeat, as we delve deep into the behind-the-scenes magic that made Deadbeat a reality. Discover the hidden secrets, creative processes, and untold stories that brought this captivating production to the screen. Get ready to be immersed in the world of Deadbeat like never before.
             </div>
           </div>
 
@@ -544,7 +545,7 @@
         
         <div class="db-row">
           <div class="db-col">
-            IT’S A ROADMAP!
+            IT’S A ROAD. MAP.
           </div>
 
           <div class="db-col">
@@ -554,7 +555,6 @@
         </div>
       </div>
     </div>
-
   </section>
 
   <section class="db-section db-section--explore-oc-after-life-roadmap">
@@ -600,7 +600,7 @@
       <div class="db-container">
         <div class="db-row">
           <div class="db-col">
-            IT’S A ROADMAP
+            IT’S A ROAD. MAP.
           </div>
 
           <div class="db-col">
@@ -617,14 +617,14 @@
         <a class="radio-link"
           title="Radio Link"
           href="https://cd929fm.com">
-          CD92.9
+          CD 92.9 FM
         </a>
         <br/>
         <span>
           A Really Real Radio Station
         </span>
         <p>
-          No, really. We're making a radio station with our friends at CD92.9. A direct line from the undead world of 2069 into your ear-hole. Dope music, DJ’s, YOU, and sometimes our fav artists show up.
+          No, really. We're making a radio station with our friends at CD 92.9 FN. A direct line from the undead world of 2069 into your ear-hole. Dope music, DJ’s, YOU, and sometimes our fav artists show up.
         </p>
       </div>
     </div>
