--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -20,24 +20,65 @@
           <p>
             Put your digital John Hancock there mister, or maam, or mister maam and get updates direct to your eyeballs from 2069.
           </p>
-          <ul class="db-contact-list">
-            <li class="db-contact-item">
-              <a class="db-contact-link"
-                title="Contact Email"
-                href="mailto:example@deadbeat2069.com">
-                <span class="db-contact-label">EMAIL</span>
-                <span class="db-contact-value">example@deadbeat2069.com</span>
-              </a>
-            </li>
-            <li class="db-contact-item">
-              <a class="db-contact-link"
-                title="Contact Number"
-                href="tel:44(0)2030020224">
-                <span class="db-contact-label">CALL</span>
-                <span class="db-contact-value">+44 (0)20 30020224</span>
-              </a>
-            </li>
-          </ul>
+          <form class="db-form--newsletter db-form validate"
+            id="mc-embedded-subscribe-form"
+            name="mc-embedded-subscribe-form"
+            method="post"
+            action="https://elevate-m.us21.list-manage.com/subscribe/post?u=c9161b1e17a490930cf29bfcd&amp;id=b779bd68b4&amp;f_id=00fbdce6f0"
+            accept-charset="UTF-8"
+            target="_blank">
+            <div class="db-form-wrap">
+              <div class="db-form-group">
+                <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                  /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
+                  <input type="text" name="b_c9161b1e17a490930cf29bfcd_b779bd68b4" tabindex="-1" value="">
+                </div>
+              </div>
+              <div class="db-form-group">
+                <input class="db-form-input required email"
+                  id="mce-EMAIL"
+                  type="email"
+                  name="EMAIL"
+                  placeholder=""
+                  required=""
+                  value=""
+                  autocorrect="off"
+                  autocapitalize="off">
+                <button class="db-btn--form-submit db-btn"
+                  id="mc-embedded-subscribe"
+                  type="submit"
+                  name="subscribe">
+                  SUBSCRIBE
+                </button>
+              </div>
+            </div>
+            <div id="mce-responses" class="clear foot">
+              <div class="response" id="mce-error-response" style="display: none;"></div>
+              <div class="response" id="mce-success-response" style="display: none;"></div>
+            </div>
+          </form>
+
+          {% comment %}
+            <ul class="db-contact-list">
+              <li class="db-contact-item">
+                <a class="db-contact-link"
+                  title="Contact Email"
+                  href="mailto:example@deadbeat2069.com">
+                  <span class="db-contact-label">EMAIL</span>
+                  <span class="db-contact-value">example@deadbeat2069.com</span>
+                </a>
+              </li>
+              <li class="db-contact-item">
+                <a class="db-contact-link"
+                  title="Contact Number"
+                  href="tel:44(0)2030020224">
+                  <span class="db-contact-label">CALL</span>
+                  <span class="db-contact-value">+44 (0)20 30020224</span>
+                </a>
+              </li>
+            </ul>
+          {% endcomment %}
+
         </div>
         <div class="db-col">
           <img class="db-img-figure01 db-img"
@@ -47,6 +88,7 @@
             width=""
             height=""
             loading="lazy">
+          <div class="db-img-overlay"></div>
         </div>
       </div>
     </div>
@@ -57,8 +99,9 @@
         <div class="db-col">
           <div class="db-inner-row">
             <a class="db-elevate-link"
-              title=""
-              href="">
+              title="Elevate Taleng Group"
+              href="https://elevatetalent.group/"
+              target="_blank">
               <img class="db-elevate-logo db-img"
                 alt=""
                 title=""
