--- a/snippets/socials.liquid
+++ b/snippets/socials.liquid
@@ -7,7 +7,8 @@
       <li class="db-socials-item">
         <a class="db-socials-link"
           title="{{ socialItem.title }}"
-          href="{{ socialItem.url }}">
+          href="{{ socialItem.url }}"
+          target="_blank">
 
           {% if socialItem.title == 'Spotify' %}
 
