--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -102,7 +102,8 @@
         <div class="db-col">
           <ul class="db-menu-list">
             <li class="db-menu-item"
-              v-for="(menuItem, menuIndex) in header.main_menu">
+              v-for="(menuItem, menuIndex) in header.main_menu"
+              :class="{ '--disabled' : menuItem.title == 'Merch Store' }">
               <a class="db-menu-link"
                 :title="menuItem.title"
                 :href="menuItem.url"
@@ -121,8 +122,9 @@
           {% render 'socials' %}
           <div class="db-inner-row">
             <a class="db-menu-link"
-              title=""
-              href="">
+              title="Privacy Policy"
+              href="https://cdn.shopify.com/s/files/1/0829/1654/0715/files/Privacy_Policy_Terms_of_Use_IP_Rights.docx?v=1698970170"
+              target="_blank">
               Privacy Policy
             </a>
             <svg class="db-svg"
@@ -139,8 +141,9 @@
               </circle>
             </svg>
             <a class="db-menu-link"
-              title=""
-              href="">
+              title="Terms of Use"
+              href="https://cdn.shopify.com/s/files/1/0829/1654/0715/files/Privacy_Policy_Terms_of_Use_IP_Rights.docx?v=1698970170"
+              target="_blank">
               Terms of Use
             </a>
             <svg class="db-svg"
@@ -156,7 +159,7 @@
                 fill="#CAC7D0">
               </circle>
             </svg>
-            <a class="db-menu-link"
+            <a class="db-menu-link --disabled"
               title=""
               href="">
               IP Rights
